<resources>
    <string name="app_name">Booking</string>
    <string name="btn_desayuno" />
    <string name="lbl_Bebidas">Bebidas: </string>
    <string name="lbl_comidas">Comidas: </string>
    <string name="lbl_Postre">Postres: </string>
    <string name="lbl_bebida1">Cafe</string>
    <string name="lbl_bebida2">Chocolate</string>
    <string name="lbl_bebida3">Te</string>
    <string name="lbl_bebida4">Leche Azul</string>
    <string name="lbl_bebida5">Health</string>
    <string name="lbl_bebida6">Limonada</string>
    <string name="lbl_bebida7">Fanta</string>
    <string name="lbl_bebida8">Cerveza</string>
    <string name="lbl_bebida9">Mana</string>
    <string name="lbl_bebida10">Licuados</string>
    <string name="lbl_comida1">Waffles</string>
    <string name="lbl_comida2">Huevos</string>
    <string name="lbl_comida3">Hot-cakes</string>
    <string name="lbl_comida4">Mollete</string>
    <string name="lbl_comida5">Tacos</string>
    <string name="lbl_comida6">Enchiladas</string>
    <string name="lbl_comida7">Tortas</string>
    <string name="lbl_comida8">Pechuga</string>
    <string name="lbl_comida9">Lomo</string>
    <string name="lbl_comida10">New-York</string>
    <string name="lbl_postres1">Flan</string>
    <string name="lbl_postres2">Gelatina</string>
    <string name="lbl_postres3">Pay</string>
    <string name="lbl_postres4">Pastel</string>
    <string name="lbl_postres5">Galleta</string>
    <string name="btn_Ok"> Guardar Orden</string>
    <string name="lbl_idUpdate">Coloca el ID, de la Orden, a Editar o Borrar: </string>
    <string name="lbl_nuevaOrden">Nueva Orden</string>
    <string name="lbl_eliminar">Eliminar Orden</string>
    <string name="lbl_actualizarOrden">Actualizar Orden</string>
    <string name="lbl_orderName">Orden a nombre de:</string>
    <string name="txt_orderOwner" />
    <string name="btn_ticket">Ticket</string>
    <string name="ticketLabel" ></string>
    <string name="lbl_ticket" >Alimento - Cantidad</string>
    <string name="lbl_ticket2">$ - U</string>
    <string name="lbl_ticket3">$ - T</string>
    <string name="lbl_ticket4" />
    <string name="lbl_ticket5" />
    <string name="lbl_ticket6" />
    <string name="lbl_ticket7" />
    <string name="lbl_ticket9" />
    <string name="lbl_ticket8" />
</resources>
