<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.joss.booking.MainActivity"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btn_NuevaOrden"
        android:layout_width="278dp"
        android:layout_height="0dp"
        android:background="@drawable/neworder"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btn_actualizarOrden"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="53dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_elimiarOrden"
        android:layout_width="306dp"
        android:layout_height="0dp"
        android:background="@drawable/deleteorder"
        android:layout_marginEnd="76dp"
        app:layout_constraintRight_toLeftOf="@+id/btn_actualizarOrden"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/lbl_updateOrden"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintTop_toTopOf="@+id/lbl_eliminar"
        android:layout_marginRight="76dp"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txt_idActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_updateOrden"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.498" />

    <TextView
        android:id="@+id/lbl_updateOrden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_idUpdate"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="178dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_actualizarOrden"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:background="@drawable/editorder"
        android:layout_marginEnd="9dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/btn_elimiarOrden"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/lbl_nuevaOrden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/lbl_nuevaOrden"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_NuevaOrden"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/lbl_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lbl_eliminar"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="308dp"
        android:text="@string/lbl_actualizarOrden"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btn_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ticket"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_idActualizar"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
